tests/NormalTests/paczka1/fuzzy1/48395474.err
Error in line 14: If5mrxF S816 -3,3
Error in line 20: 2BvMR2ZZlR S816 305,8
Error in line 16: s1aQxjLkD S137 58,3
Error in line 25: If5mrxF S816 99,0
Error in line 29: HAseaanE A739 45,6
Error in line 23: S131 S131 7,7
